compiler/tests/fixtures/negative/error_semantic3.sol
function foo() -> int {
    return 5;
}

function foo() -> int {
    return 10;
}

function start() -> int {
    return foo();
}
